target/generated-sources/antlr4/ru/NecroCake/VM11/Compillers/PascalCompiller/PascalParser.java
// Generated from ru/NecroCake/VM11/Compillers/PascalCompiller/Pascal.g4 by ANTLR 4.9.2
package ru.NecroCake.VM11.Compillers.PascalCompiller;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PascalParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		KW_PROGRAMM=1, KW_VAR=2, KW_BEGIN=3, KW_END=4, KW_READLN=5, KW_WRITELN=6, 
		KW_IF=7, KW_ELSE=8, KW_THEN=9, KW_WHILE=10, KW_DO=11, KW_OR=12, KW_AND=13, 
		KW_DIV=14, KW_MOD=15, KW_SET=16, KW_LPAR=17, KW_RPAR=18, KW_LQPAR=19, 
		KW_RQPAR=20, KW_DOT=21, KW_COMMA=22, KW_COLON=23, KW_SEMICOLON=24, KW_PLUS=25, 
		KW_MINUS=26, KW_MULT=27, KW_SLASH=28, KW_EXP=29, TYPE=30, NUMBER=31, EXP=32, 
		COMPAR_OPS=33, NAME=34, STRING=35, DIGIT=36, CHARACTER=37, NEXT_OP=38, 
		INDEX=39, END_SYMBOL=40, COMMENT=41;
	public static final int
		RULE_programm = 0, RULE_declare_block = 1, RULE_block = 2, RULE_operator = 3, 
		RULE_declare = 4, RULE_read_operator = 5, RULE_write_operator = 6, RULE_if_operator = 7, 
		RULE_else_operator = 8, RULE_while_operator = 9, RULE_set_operator = 10, 
		RULE_compare = 11, RULE_expr = 12, RULE_expr_pr3 = 13, RULE_expr_pr2 = 14, 
		RULE_expr_pr1 = 15, RULE_signed_number = 16, RULE_unsigned_real_number = 17, 
		RULE_real_number = 18, RULE_set = 19, RULE_variable = 20, RULE_value = 21, 
		RULE_param = 22, RULE_name_list = 23, RULE_param_list = 24, RULE_any_number = 25;
	private static String[] makeRuleNames() {
		return new String[] {
			"programm", "declare_block", "block", "operator", "declare", "read_operator", 
			"write_operator", "if_operator", "else_operator", "while_operator", "set_operator", 
			"compare", "expr", "expr_pr3", "expr_pr2", "expr_pr1", "signed_number", 
			"unsigned_real_number", "real_number", "set", "variable", "value", "param", 
			"name_list", "param_list", "any_number"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'programm'", "'var'", "'begin'", "'end'", "'readln'", "'writeln'", 
			"'if'", "'else'", "'then'", "'while'", "'do'", "'or'", "'and'", "'div'", 
			"'mod'", "':='", "'('", "')'", "'['", "']'", "'.'", "','", "':'", "';'", 
			"'+'", "'-'", "'*'", "'/'", "'e'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "KW_PROGRAMM", "KW_VAR", "KW_BEGIN", "KW_END", "KW_READLN", "KW_WRITELN", 
			"KW_IF", "KW_ELSE", "KW_THEN", "KW_WHILE", "KW_DO", "KW_OR", "KW_AND", 
			"KW_DIV", "KW_MOD", "KW_SET", "KW_LPAR", "KW_RPAR", "KW_LQPAR", "KW_RQPAR", 
			"KW_DOT", "KW_COMMA", "KW_COLON", "KW_SEMICOLON", "KW_PLUS", "KW_MINUS", 
			"KW_MULT", "KW_SLASH", "KW_EXP", "TYPE", "NUMBER", "EXP", "COMPAR_OPS", 
			"NAME", "STRING", "DIGIT", "CHARACTER", "NEXT_OP", "INDEX", "END_SYMBOL", 
			"COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Pascal.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PascalParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgrammContext extends ParserRuleContext {
		public TerminalNode KW_PROGRAMM() { return getToken(PascalParser.KW_PROGRAMM, 0); }
		public List<TerminalNode> NEXT_OP() { return getTokens(PascalParser.NEXT_OP); }
		public TerminalNode NEXT_OP(int i) {
			return getToken(PascalParser.NEXT_OP, i);
		}
		public TerminalNode NAME() { return getToken(PascalParser.NAME, 0); }
		public TerminalNode EOF() { return getToken(PascalParser.EOF, 0); }
		public Declare_blockContext declare_block() {
			return getRuleContext(Declare_blockContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode KW_DOT() { return getToken(PascalParser.KW_DOT, 0); }
		public ProgrammContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterProgramm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitProgramm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascalVisitor ) return ((PascalVisitor<? extends T>)visitor).visitProgramm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgrammContext programm() throws RecognitionException {
		ProgrammContext _localctx = new ProgrammContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programm);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			match(KW_PROGRAMM);
			setState(53);
			match(NEXT_OP);
			setState(54);
			match(NAME);
			setState(57);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(55);
				match(NEXT_OP);
				setState(56);
				declare_block();
				}
				break;
			}
			setState(65);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(59);
				match(NEXT_OP);
				setState(60);
				block();
				setState(61);
				match(KW_DOT);
				setState(63);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(62);
					match(NEXT_OP);
					}
					break;
				}
				}
				break;
			}
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NEXT_OP) {
				{
				setState(67);
				match(NEXT_OP);
				}
			}

			setState(70);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declare_blockContext extends ParserRuleContext {
		public TerminalNode KW_VAR() { return getToken(PascalParser.KW_VAR, 0); }
		public List<TerminalNode> NEXT_OP() { return getTokens(PascalParser.NEXT_OP); }
		public TerminalNode NEXT_OP(int i) {
			return getToken(PascalParser.NEXT_OP, i);
		}
		public List<DeclareContext> declare() {
			return getRuleContexts(DeclareContext.class);
		}
		public DeclareContext declare(int i) {
			return getRuleContext(DeclareContext.class,i);
		}
		public List<TerminalNode> KW_SEMICOLON() { return getTokens(PascalParser.KW_SEMICOLON); }
		public TerminalNode KW_SEMICOLON(int i) {
			return getToken(PascalParser.KW_SEMICOLON, i);
		}
		public Declare_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declare_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterDeclare_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitDeclare_block(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascalVisitor ) return ((PascalVisitor<? extends T>)visitor).visitDeclare_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declare_blockContext declare_block() throws RecognitionException {
		Declare_blockContext _localctx = new Declare_blockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declare_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(KW_VAR);
			setState(73);
			match(NEXT_OP);
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NAME) {
				{
				{
				setState(74);
				declare();
				setState(75);
				match(KW_SEMICOLON);
				setState(77);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(76);
					match(NEXT_OP);
					}
					break;
				}
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode KW_BEGIN() { return getToken(PascalParser.KW_BEGIN, 0); }
		public List<TerminalNode> NEXT_OP() { return getTokens(PascalParser.NEXT_OP); }
		public TerminalNode NEXT_OP(int i) {
			return getToken(PascalParser.NEXT_OP, i);
		}
		public TerminalNode KW_END() { return getToken(PascalParser.KW_END, 0); }
		public List<OperatorContext> operator() {
			return getRuleContexts(OperatorContext.class);
		}
		public OperatorContext operator(int i) {
			return getRuleContext(OperatorContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascalVisitor ) return ((PascalVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(KW_BEGIN);
			setState(85);
			match(NEXT_OP);
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KW_READLN) | (1L << KW_WRITELN) | (1L << KW_IF) | (1L << KW_WHILE) | (1L << NAME))) != 0)) {
				{
				{
				setState(86);
				operator();
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NEXT_OP) {
					{
					setState(87);
					match(NEXT_OP);
					}
				}

				}
				}
				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(95);
			match(KW_END);
			setState(97);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(96);
				match(NEXT_OP);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperatorContext extends ParserRuleContext {
		public Read_operatorContext read_operator() {
			return getRuleContext(Read_operatorContext.class,0);
		}
		public If_operatorContext if_operator() {
			return getRuleContext(If_operatorContext.class,0);
		}
		public While_operatorContext while_operator() {
			return getRuleContext(While_operatorContext.class,0);
		}
		public Write_operatorContext write_operator() {
			return getRuleContext(Write_operatorContext.class,0);
		}
		public Set_operatorContext set_operator() {
			return getRuleContext(Set_operatorContext.class,0);
		}
		public OperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterOperator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitOperator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascalVisitor ) return ((PascalVisitor<? extends T>)visitor).visitOperator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperatorContext operator() throws RecognitionException {
		OperatorContext _localctx = new OperatorContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_operator);
		try {
			setState(104);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KW_READLN:
				enterOuterAlt(_localctx, 1);
				{
				setState(99);
				read_operator();
				}
				break;
			case KW_IF:
				enterOuterAlt(_localctx, 2);
				{
				setState(100);
				if_operator();
				}
				break;
			case KW_WHILE:
				enterOuterAlt(_localctx, 3);
				{
				setState(101);
				while_operator();
				}
				break;
			case KW_WRITELN:
				enterOuterAlt(_localctx, 4);
				{
				setState(102);
				write_operator();
				}
				break;
			case NAME:
				enterOuterAlt(_localctx, 5);
				{
				setState(103);
				set_operator();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclareContext extends ParserRuleContext {
		public List<TerminalNode> NAME() { return getTokens(PascalParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(PascalParser.NAME, i);
		}
		public TerminalNode KW_COLON() { return getToken(PascalParser.KW_COLON, 0); }
		public TerminalNode TYPE() { return getToken(PascalParser.TYPE, 0); }
		public List<TerminalNode> KW_COMMA() { return getTokens(PascalParser.KW_COMMA); }
		public TerminalNode KW_COMMA(int i) {
			return getToken(PascalParser.KW_COMMA, i);
		}
		public List<TerminalNode> NEXT_OP() { return getTokens(PascalParser.NEXT_OP); }
		public TerminalNode NEXT_OP(int i) {
			return getToken(PascalParser.NEXT_OP, i);
		}
		public SetContext set() {
			return getRuleContext(SetContext.class,0);
		}
		public TerminalNode INDEX() { return getToken(PascalParser.INDEX, 0); }
		public DeclareContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declare; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterDeclare(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitDeclare(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascalVisitor ) return ((PascalVisitor<? extends T>)visitor).visitDeclare(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclareContext declare() throws RecognitionException {
		DeclareContext _localctx = new DeclareContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declare);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(NAME);
			setState(117);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(108);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==NEXT_OP) {
						{
						setState(107);
						match(NEXT_OP);
						}
					}

					setState(110);
					match(KW_COMMA);
					setState(112);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==NEXT_OP) {
						{
						setState(111);
						match(NEXT_OP);
						}
					}

					setState(114);
					match(NAME);
					}
					} 
				}
				setState(119);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			}
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NEXT_OP) {
				{
				setState(120);
				match(NEXT_OP);
				}
			}

			setState(123);
			match(KW_COLON);
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NEXT_OP) {
				{
				setState(124);
				match(NEXT_OP);
				}
			}

			setState(127);
			match(TYPE);
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KW_SET) | (1L << NEXT_OP) | (1L << INDEX))) != 0)) {
				{
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NEXT_OP) {
					{
					setState(128);
					match(NEXT_OP);
					}
				}

				setState(133);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case KW_SET:
					{
					setState(131);
					set();
					}
					break;
				case INDEX:
					{
					setState(132);
					match(INDEX);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Read_operatorContext extends ParserRuleContext {
		public TerminalNode KW_READLN() { return getToken(PascalParser.KW_READLN, 0); }
		public TerminalNode KW_LPAR() { return getToken(PascalParser.KW_LPAR, 0); }
		public Name_listContext name_list() {
			return getRuleContext(Name_listContext.class,0);
		}
		public TerminalNode KW_RPAR() { return getToken(PascalParser.KW_RPAR, 0); }
		public TerminalNode KW_SEMICOLON() { return getToken(PascalParser.KW_SEMICOLON, 0); }
		public List<TerminalNode> NEXT_OP() { return getTokens(PascalParser.NEXT_OP); }
		public TerminalNode NEXT_OP(int i) {
			return getToken(PascalParser.NEXT_OP, i);
		}
		public Read_operatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_read_operator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterRead_operator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitRead_operator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascalVisitor ) return ((PascalVisitor<? extends T>)visitor).visitRead_operator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Read_operatorContext read_operator() throws RecognitionException {
		Read_operatorContext _localctx = new Read_operatorContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_read_operator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(KW_READLN);
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NEXT_OP) {
				{
				setState(138);
				match(NEXT_OP);
				}
			}

			setState(141);
			match(KW_LPAR);
			setState(142);
			name_list();
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NEXT_OP) {
				{
				setState(143);
				match(NEXT_OP);
				}
			}

			setState(146);
			match(KW_RPAR);
			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NEXT_OP) {
				{
				setState(147);
				match(NEXT_OP);
				}
			}

			setState(150);
			match(KW_SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Write_operatorContext extends ParserRuleContext {
		public TerminalNode KW_WRITELN() { return getToken(PascalParser.KW_WRITELN, 0); }
		public TerminalNode KW_LPAR() { return getToken(PascalParser.KW_LPAR, 0); }
		public Param_listContext param_list() {
			return getRuleContext(Param_listContext.class,0);
		}
		public TerminalNode KW_RPAR() { return getToken(PascalParser.KW_RPAR, 0); }
		public TerminalNode KW_SEMICOLON() { return getToken(PascalParser.KW_SEMICOLON, 0); }
		public List<TerminalNode> NEXT_OP() { return getTokens(PascalParser.NEXT_OP); }
		public TerminalNode NEXT_OP(int i) {
			return getToken(PascalParser.NEXT_OP, i);
		}
		public Write_operatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_write_operator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterWrite_operator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitWrite_operator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascalVisitor ) return ((PascalVisitor<? extends T>)visitor).visitWrite_operator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Write_operatorContext write_operator() throws RecognitionException {
		Write_operatorContext _localctx = new Write_operatorContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_write_operator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(KW_WRITELN);
			setState(154);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NEXT_OP) {
				{
				setState(153);
				match(NEXT_OP);
				}
			}

			setState(156);
			match(KW_LPAR);
			setState(157);
			param_list();
			setState(159);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NEXT_OP) {
				{
				setState(158);
				match(NEXT_OP);
				}
			}

			setState(161);
			match(KW_RPAR);
			setState(163);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NEXT_OP) {
				{
				setState(162);
				match(NEXT_OP);
				}
			}

			setState(165);
			match(KW_SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class If_operatorContext extends ParserRuleContext {
		public TerminalNode KW_IF() { return getToken(PascalParser.KW_IF, 0); }
		public List<TerminalNode> NEXT_OP() { return getTokens(PascalParser.NEXT_OP); }
		public TerminalNode NEXT_OP(int i) {
			return getToken(PascalParser.NEXT_OP, i);
		}
		public CompareContext compare() {
			return getRuleContext(CompareContext.class,0);
		}
		public TerminalNode KW_THEN() { return getToken(PascalParser.KW_THEN, 0); }
		public OperatorContext operator() {
			return getRuleContext(OperatorContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode KW_SEMICOLON() { return getToken(PascalParser.KW_SEMICOLON, 0); }
		public Else_operatorContext else_operator() {
			return getRuleContext(Else_operatorContext.class,0);
		}
		public If_operatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_operator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterIf_operator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitIf_operator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascalVisitor ) return ((PascalVisitor<? extends T>)visitor).visitIf_operator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final If_operatorContext if_operator() throws RecognitionException {
		If_operatorContext _localctx = new If_operatorContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_if_operator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167);
			match(KW_IF);
			setState(168);
			match(NEXT_OP);
			setState(169);
			compare();
			setState(170);
			match(NEXT_OP);
			setState(171);
			match(KW_THEN);
			setState(172);
			match(NEXT_OP);
			setState(180);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KW_READLN:
			case KW_WRITELN:
			case KW_IF:
			case KW_WHILE:
			case NAME:
				{
				setState(173);
				operator();
				}
				break;
			case KW_BEGIN:
				{
				setState(174);
				block();
				setState(176);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NEXT_OP) {
					{
					setState(175);
					match(NEXT_OP);
					}
				}
